Refactor everything :)